# CfRR_Courses

./: .RData  .Rhistory  .buildinfo  .gitignore  .gitleaks.toml  .gitleaksignore  CITATION.cff  LICENSE.txt  Manifest.toml  Pipfile  Project.toml  Python_MachineLearning.ipynb  Python_Matplotlib.ipynb  Python_NumPy.ipynb  Python_ScikitLearn.ipynb  README.md  _config.yml  _toc.yml  about_us.ipynb  bibliography.html  contributing.ipynb  developing_a_course.ipynb  environment.yml  figures.ipynb  genindex.html  home_page.html  home_page.ipynb  home_page.md  how_to_use_CfRR.ipynb  hpc,_python_ds_workshops_network.html  index.html  objects.inv  pa11yci.js  package.json  parallel_computing_installation.html  parallel_computing_installation.md  pyproject.toml  pyproject.yml  python_ds_workshops_network.html  references.bib  (+15 more)
.ipynb_checkpoints/: Python_MachineLearning-checkpoint.ipynb  Python_Pandas-checkpoint.ipynb  Python_ScikitLearn-checkpoint.ipynb  README-checkpoint.md  _config-checkpoint.yml  _toc-checkpoint.yml  contributing-checkpoint.ipynb  developing_a_course-checkpoint.ipynb  home_page-checkpoint.ipynb  how_to_use_CfRR-checkpoint.ipynb  related_courses-checkpoint.ipynb  roles-checkpoint.ipynb  run_scripts_for_data-checkpoint.ipynb  suggestions_form-checkpoint.ipynb
R_functions/: quiz_renderer.R
_sources/: home_page.md
_static/: a11y-dropdown.js  a11y_citation_roles.js  a11y_code_reflow.js  a11y_focus_ring.js  a11y_landmarks.js  a11y_logo_alt.js  a11y_main_landmark.js  a11y_remove_empty_headings.js  a11y_search.js  a11y_sidebar_contrast.css  a11y_vis_network_region.js  hide_thebe_button.js  kmeans_animation.html  (+33 more)
(+2109 files in other folders)
