[tool.poetry]
name = "Coding for Reproducible Research Courses"
version = "0.1.0"
description = "Coding for Reproducible Research: Courses and Training Materials"
authors = ["CfRR Contributors"]
repository = "https://github.com/coding-for-reproducible-research/CfRR_Courses"
homepage = "https://coding-for-reproducible-research.github.io/CfRR_Courses/home_page.html"

[tool.poetry.dependencies]
python = "^3.11"  # or your desired Python version
numpy = "^1.26.4"
pandas = "*"
jupyter-book = "*"
ghp-import = "*"
jupyterquiz = "*"
matplotlib = "*"
scikit-learn = "*"
pyvis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
